# PDFshuffle

./: pyproject.toml
src/emulator_scan/: http_scanner_emulator.py
src/pdfshuffle/: config.py  configstring.py  function.py  getscan.py  loadimage.py  main.py  pagelist.py  pdfdata.py  pdfscaner.py  pdfshuffle.py  scaner.py  scanerwindow.py  shortcut.py  shuffle.py  toolextract.py  window.py
test/: test_config.py
tests/: test_config.py  test_configstring.py  test_function.py
