[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[project]
authors = [
    {name = "Dmitriy Aldunin", email = "craft@ctvi.ru"},
]
requires-python = "<4.0,>=3.9"
dependencies = [
    "PyQt5==5.15.2",
    "pdf2image<2.0.0,>=1.16.3",
    "loguru<1.0.0,>=0.7.1",
    "pytest==8.4.2",
    "python-sane==2.9.2",
    "pypdf==6.1.3",
    "pillow==11.3.0",
]
name = "pdfshuffle"
version = "2.4.0"
description = ""

[project.requires-plugins]
poetry-plugin-export = ">=1.8"
